--- a/sellandbuy/src/templates/profile/item/penawaran.ejs
+++ b/sellandbuy/src/templates/profile/item/penawaran.ejs
@@ -17,6 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/penawaran.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="min-h-screen flex flex-col font-saira">
@@ -179,7 +180,7 @@
       class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
     >
     <div class="container mx-auto p-4">
-        <h2 class="text-5xl font-bold mb-4">Daftar Penawaran Barang</h2>
+        <h2 class="mt-8 text-3xl lg:mt-0 lg:text-5xl font-bold mb-4">Daftar Penawaran Barang</h2>
         <hr class="h-px w-full bg-black border-0 dark:bg-gray-700 mb-4">
         
         <!-- Offer List -->
@@ -191,11 +192,11 @@
               <img class="w-12 h-12 rounded-full" src="/images/pictures/ex-img.png" alt="Profile Picture">
               <div class="ml-4">
                 <div class="text-lg font-semibold">Jack Resti</div>
-                <div class="text-gray-600">Menawar Rp. 125.000</div>
+                <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
               </div>
             </div>
             <div>
-              <a href="#" class="text-black font-semibold">hubungi sekarang</a>
+              <a href="#" class="text-sm text-black font-semibold">hubungi sekarang</a>
             </div>
           </div>
           
@@ -207,11 +208,11 @@
               <img class="w-12 h-12 rounded-full" src="/images/pictures/ex-img.png" alt="Profile Picture">
               <div class="ml-4">
                 <div class="text-lg font-semibold">Jack Resti</div>
-                <div class="text-gray-600">Menawar Rp. 125.000</div>
+                <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
               </div>
             </div>
             <div>
-              <a href="#" class="text-black font-semibold">hubungi sekarang</a>
+              <a href="#" class="text-sm text-black font-semibold">hubungi sekarang</a>
             </div>
           </div>
           
@@ -222,11 +223,11 @@
               <img class="w-12 h-12 rounded-full" src="/images/pictures/ex-img.png" alt="Profile Picture">
               <div class="ml-4">
                 <div class="text-lg font-semibold">Jack Resti</div>
-                <div class="text-gray-600">Menawar Rp. 125.000</div>
+                <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
               </div>
             </div>
             <div>
-              <a href="#" class="text-black font-semibold">hubungi sekarang</a>
+              <a href="#" class="text-sm text-black font-semibold">hubungi sekarang</a>
             </div>
           </div>
           
@@ -237,11 +238,11 @@
               <img class="w-12 h-12 rounded-full" src="/images/pictures/ex-img.png" alt="Profile Picture">
               <div class="ml-4">
                 <div class="text-lg font-semibold">Jack Resti</div>
-                <div class="text-gray-600">Menawar Rp. 125.000</div>
+                <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
               </div>
             </div>
             <div>
-              <a href="/pengguna-lain" class="text-black font-semibold">hubungi sekarang</a>
+              <a href="/pengguna-lain" class="text-sm text-black font-semibold">hubungi sekarang</a>
             </div>
           </div>
           
@@ -252,11 +253,11 @@
               <img class="w-12 h-12 rounded-full" src="/images/pictures/ex-img.png" alt="Profile Picture">
               <div class="ml-4">
                 <div class="text-lg font-semibold">Jack Resti</div>
-                <div class="text-gray-600">Menawar Rp. 125.000</div>
+                <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
               </div>
             </div>
             <div>
-              <a href="#" class="text-black font-semibold">hubungi sekarang</a>
+              <a href="#" class="text-sm text-black font-semibold">hubungi sekarang</a>
             </div>
           </div>
           <hr class="h-px w-full bg-gray-300 border-0">
@@ -391,11 +392,11 @@
               <img class="w-12 h-12 rounded-full" src="/images/pictures/ex-img.png" alt="Profile Picture">
               <div class="ml-4">
                 <div class="text-lg font-semibold">Jack Resti</div>
-                <div class="text-gray-600">Menawar Rp. 125.000</div>
+                <div class="text-xs text-gray-600">Menawar Rp. 125.000</div>
               </div>
             </div>
             <div>
-              <a href="#" class="text-black font-semibold">hubungi sekarang</a>
+              <a href="#" class="text-sm text-black font-semibold">hubungi sekarang</a>
             </div>
           </div>
         </div>
