--- a/sellandbuy/src/templates/landing-page/index.ejs
+++ b/sellandbuy/src/templates/landing-page/index.ejs
@@ -27,7 +27,7 @@
       >
         <div
           id="top-nav"
-          class="w-full flex items-center justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
+          class="w-full flex items-center sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
         >
 
         <!-- Profile Nav -->
@@ -45,7 +45,7 @@
               </button>
             </div>
             <div
-              class="dropdown-after absolute left-0 right-0 z-10 mt-2 min-w-max origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
+              class="dropdown-after absolute left-0 right-0 z-50 mt-2 min-w-max origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
               role="menu"
               aria-orientation="vertical"
               aria-labelledby="menu-button"
@@ -67,7 +67,7 @@
           <a
             href="/"
             id="navbar-logo"
-            class="w-auto sm:w-1/3 flex items-center justify-center"
+            class="w-auto ml-10 sm:ml-0 sm:w-1/3 flex items-center justify-center"
           >
             <img
               id="logo"
@@ -90,7 +90,7 @@
               <form
                 action="/search"
                 method="GET"
-                class="w-full flex items-center"
+                class="w-full flex items-center z-10"
               >
                 <span class="sr-only">Search</span>
                 <span
@@ -121,21 +121,6 @@
                 />
               </form>
             </div>
-          </div>
-          <div id="slider" class="flex sm:hidden justify-end items-center">
-            <a id="menu" href="#">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="24px"
-                viewBox="0 -960 960 960"
-                width="24px"
-                fill="#000000"
-              >
-                <path
-                  d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
-                ></path>
-              </svg>
-            </a>
           </div>
         </div>
 
