--- a/sellandbuy/src/templates/market/detail-item.ejs
+++ b/sellandbuy/src/templates/market/detail-item.ejs
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/detail-item.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="min-h-screen flex flex-col font-saira">
@@ -34,12 +35,12 @@
             <div>
               <button
                 type="button"
-                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition delay-100"
+                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition"
                 id="menu-button"
                 aria-expanded="false"
                 aria-haspopup="true"
               >
-                <img class="w-btn-pfl" src="images/pictures/default.png" />
+                <img class="w-btn-pfl" src="/images/pictures/default.png" />
               </button>
             </div>
             <div
@@ -63,12 +64,12 @@
           <a
             href="/"
             id="navbar-logo"
-            class="w-auto sm:w-1/3 flex items-center justify-center"
+            class="w-auto mx-auto sm:w-1/3 flex items-center justify-center"
           >
             <img
               id="logo"
               class="h-5 sm:h-9 sm:w-auto cursor-pointer"
-              src="images/navbar-logo.png"
+              src="/images/navbar-logo.png"
             />
           </a>
           <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
@@ -77,7 +78,7 @@
               href="#"
               class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
-              <img class="w-btn-pfl" src="images/tambahkan.png" />
+              <img class="w-btn-pfl" src="/images/tambahkan.png" />
             </a>
             <div
               id="srch-bar"
@@ -118,25 +119,10 @@
               </form>
             </div>
           </div>
-          <div id="slider" class="flex sm:hidden justify-end items-center">
-            <a id="menu" href="#">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="24px"
-                viewBox="0 -960 960 960"
-                width="24px"
-                fill="#000000"
-              >
-                <path
-                  d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
-                ></path>
-              </svg>
-            </a>
-          </div>
         </div>
         <div
           id="bot-nav"
-          class="w-full flex items-center justify-center pt-2 pb-4 sm:px-[20px]"
+          class="w-full flex items-center justify-center mx-3 pt-2 pb-4 sm:px-[20px]"
         >
           <div
             id="srch-bar"
@@ -176,23 +162,23 @@
       id="content"
       class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
     >
-      <div class="p-6">
-        <div class="flex flex-row divide-x-2 divide-solid divide-black">
+      <div class="p-6 lg:my-auto">
+        <div class="flex flex-col sm:flex-row lg:divide-x-2 lg:divide-solid lg:divide-black">
             <!-- Images Section -->
-            <div class="w-full lg:w-1/2 mr-5">
-                <div class="grid grid-rows-3 grid-flow-col gap-4 justify-center items-center">
-                    <img src="images/market-images/shirt2.png" alt="Image 1" class="w-auto h-auto">
-                    <img src="images/market-images/shirt3.png" alt="Image 2" class="w-auto h-auto">
-                    <img src="images/market-images/shirt2.png" alt="Image 3" class="w-auto h-auto">
-                    <div class="row-span-3">
-                      <img src="images/market-images/shirt.png" alt="Image 4" class="w-auto h-auto">
+            <div class="w-full lg:w-1/2 mr-5 mb-4 sm:mb-0 md:my-auto">
+                <div class="grid grid-rows-2 lg:grid-rows-3 grid-flow-col gap-4 justify-center items-center">
+                    <img src="images/market-images/shirt2.png" alt="Image 1" class="h-48 w-48 sm:w-auto sm:h-auto">
+                    <img src="images/market-images/shirt3.png" alt="Image 2" class="h-48 w-48 sm:w-auto sm:h-auto">
+                    <img src="images/market-images/shirt2.png" alt="Image 3" class="h-48 w-48 sm:w-auto sm:h-auto">
+                    <div class="lg:row-span-3">
+                      <img src="images/market-images/shirt.png" alt="Image 4" class="h-48 w-48 sm:w-auto sm:h-auto">
                     </div>
                 </div>
             </div>
             <!-- Details Section -->
             <div class="w-full lg:w-1/2 p-5">
-                <h1 class="text-5xl font-bold mb-4">Polo Hitam Laki-Laki</h1>
-                <hr class="h-px w-2/3 bg-black border-0 dark:bg-gray-700">
+                <h1 class="text-3xl font-bold mb-4 sm:text-4xl lg:text-5xl">Polo Hitam Laki-Laki</h1>
+                <hr class="line h-px w-full bg-black border-0 dark:bg-gray-700">
                 <p class="text-3xl font-bold mt-2 mb-6">Rp.200.000</p>
                 <div class="mb-4">
                     <h2 class="text-lg">Deskripsi</h2>
@@ -203,7 +189,7 @@
                         <strong>Ukuran:</strong> S, M, L, XL, XXL<br>
                     </p>
                 </div>
-                <p class="text-gray-700 mb-6 pr-72">
+                <p class="text-gray-700 mb-6 pr-0 xl:pr-72">
                   Bahan 100% katun, penjahitan ganda dibagian bawah dan ujung, welt manset pada kerah, 
                   made in indonesia. <span class="font-bold" id="dots">...</span> <span class="hidden" id="more"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                   Fusce sit amet orci vel purus feugiat convallis sed sed nisl. Donec lectus odio, posuere sed lacus in, molestie convallis magna. 
@@ -211,7 +197,7 @@
                   eu malesuada arcu tristique. Praesent sed dictum ipsum. </span> <button class="font-bold mb-2" onclick="readMoreFunction()" id="myBtn">Lihat Selengkapnya</button>
                 </p>
                 
-                <div class="flex flex-col w-1/3">
+                <div class="flex flex-col lg:w-1/3">
                     <button class="mb-2 border-2 border-black rounded-3xl bg-white text-xl font-light py-4 hover:bg-gray-100 transition delay-100" onclick="location.href = '#'">
                       <img class="inline mr-2 max-w-8 max-h-8" src="images/whatsapp2.svg" alt="Whatsapp"> Hubungi Penjual
                     </button>
@@ -220,10 +206,10 @@
                     </button>
                 </div>
 
-                <p class="font-light w-2/3 my-7"> *Berhati-hatilah dalam melakukan proses transaksi, Pastikan kembali sebelum membuat penawaran, membeli, dan menghubungi </p>
+                <p class="font-light lg:w-2/3 my-7"> *Berhati-hatilah dalam melakukan proses transaksi, Pastikan kembali sebelum membuat penawaran, membeli, dan menghubungi </p>
 
                 <h2 class="text-3xl font-light">Informasi Penjual</h2>
-                <hr class="h-px w-2/3 bg-black border-0 dark:bg-gray-700 mt-1 mb-1">
+                <hr class="line h-px w-full bg-black border-0 dark:bg-gray-700 mt-1 mb-1">
                 <div class="flex flex-row items-center">
                   <div>
                     <img class="w-20 h-20 rounded-full my-3 hover:border-2 hover:border-gray-300 transition delay-100 cursor-pointer" onclick="location.href = '/pengguna-lain'" src="images/pictures/ex-img.png" alt="Profile Photo">
