--- a/sellandbuy/src/templates/membership/invoice.ejs
+++ b/sellandbuy/src/templates/membership/invoice.ejs
@@ -15,6 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="/css/invoice.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="min-h-screen flex flex-col font-saira">
@@ -34,7 +35,7 @@
             <div>
               <button
                 type="button"
-                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200"
+                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition"
                 id="menu-button"
                 aria-expanded="false"
                 aria-haspopup="true"
@@ -63,7 +64,7 @@
           <a
             href="/"
             id="navbar-logo"
-            class="w-auto sm:w-1/3 flex items-center justify-center"
+            class="w-auto mx-auto sm:w-1/3 flex items-center justify-center"
           >
             <img
               id="logo"
@@ -118,21 +119,6 @@
               </form>
             </div>
           </div>
-          <div id="slider" class="flex sm:hidden justify-end items-center">
-            <a id="menu" href="#">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="24px"
-                viewBox="0 -960 960 960"
-                width="24px"
-                fill="#000000"
-              >
-                <path
-                  d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
-                ></path>
-              </svg>
-            </a>
-          </div>
         </div>
         <div
           id="bot-nav"
@@ -180,14 +166,14 @@
 
       <!-- Header -->
       <section class="w-full sm:w-1/2 max-w-7xl mx-auto p-8">
-        <h1 class="text-5xl font-bold text-left mt-12 mb-4">Let's finish the payment</h1>
+        <h1 class="header text-5xl font-bold text-center lg:text-left mt-12 mb-4">Let's finish the payment</h1>
         <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
       </section>
 
         <!-- Payment Section -->
         <section class="py-8">
           <div class="max-w-7xl mx-auto px-4">
-            <div class="grid grid-cols-2 md:grid-cols-2 gap-6">
+            <div class="form-container grid grid-cols-1 md:grid-cols-2 gap-6">
               <!-- Payment Form -->
               <div class="border-2 my-auto border-black p-6 rounded-lg shadow-lg">
                 <h2 class="text-4xl  font-semibold my-1 text-center">Selamat pembayaran anda berhasil!</h2>
@@ -195,7 +181,7 @@
                 <img src="/images/svg/checkmark.svg" alt="Barcode" class="mt-10 mx-auto w-auto h-auto md:w-3/4">
                 <div class="text-center">
                     <h2 class="text-3xl  font-semibold my-10">Success!</h2>
-                    <p class="mb-10 mx-28">Selamat! anda telah menyelesaikan pembayaran. Saat ini anda resmi menjadi member dari Sell&Buy, selamat menikmati benefit dari kami!</p>
+                    <p class="mb-10 mx-2 xl:mx-28">Selamat! anda telah menyelesaikan pembayaran. Saat ini anda resmi menjadi member dari Sell&Buy, selamat menikmati benefit dari kami!</p>
                 </div>
                   <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
                   <div class="text-center">
@@ -204,7 +190,7 @@
                 </div>
 
               <!-- Illustration -->
-              <div class="flex justify-center items-center">
+              <div class="illustration flex justify-center items-center">
                 <img src="/images//svg/post-office.svg" alt="Illustration" class="w-full md:w-3/4">
               </div>
             </div>
