--- a/sellandbuy/src/templates/profile/item/edit-item.ejs
+++ b/sellandbuy/src/templates/profile/item/edit-item.ejs
@@ -36,7 +36,7 @@
             <div>
               <button
                 type="button"
-                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200"
+                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition"
                 id="menu-button"
                 aria-expanded="false"
                 aria-haspopup="true"
@@ -65,7 +65,7 @@
           <a
             href="/"
             id="navbar-logo"
-            class="w-auto sm:w-1/3 flex items-center justify-center"
+            class="w-auto mx-auto sm:w-1/3 flex items-center justify-center"
           >
             <img
               id="logo"
@@ -120,21 +120,6 @@
               </form>
             </div>
           </div>
-          <div id="slider" class="flex sm:hidden justify-end items-center">
-            <a id="menu" href="#">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="24px"
-                viewBox="0 -960 960 960"
-                width="24px"
-                fill="#000000"
-              >
-                <path
-                  d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
-                ></path>
-              </svg>
-            </a>
-          </div>
         </div>
         <div
           id="bot-nav"
@@ -178,14 +163,14 @@
       id="content"
       class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
     >
-    <div class="container mx-auto p-4">
+    <div class="container mx-auto mt-10 sm:my-0 p-4">
       <h1 class="text-5xl font-bold mb-2">Isi Detail Produk</h1>
       <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
           
           <!-- Form Section -->
           <form>
-            <div class="flex flex-row mt-7">
-              <div class="w-1/2 mr-7">
+            <div class="flex flex-col sm:flex-row mt-7">
+              <div class="lg:w-1/2 lg:mr-7">
                 <h2 class="text-3xl font-bold mb-1">Detail Produk</h2>
                 <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
                 <div class="grid grid-cols-2 md:grid-cols-2 gap-6 mt-2">
@@ -214,7 +199,7 @@
             
               
               <!-- Image Section -->
-                <div class="mt-6 w-1/2">
+                <div class="mt-6 sm:w-1/2">
                   <!-- Image Container -->
                   <div class="border-2 border-gray-500 rounded-xl p-7">
                     <h2 class="text-3xl font-bold mb-1">Tambahkan Gambar / Foto Produk</h2>
@@ -267,7 +252,7 @@
               </div>
 
             <!-- Button -->
-            <div class="mt-6 w-1/4 mx-auto shadow-md">
+            <div class="mt-6 lg:w-1/4 mx-auto shadow-md">
               <button type="submit" class="w-full bg-black text-xl text-white font-bold py-2 rounded-md">Simpan Perubahan</button>
             </div>
           </div>
