--- a/sellandbuy/src/templates/profile/profil-pengguna.ejs
+++ b/sellandbuy/src/templates/profile/profil-pengguna.ejs
@@ -28,7 +28,7 @@
       >
         <div
           id="top-nav"
-          class="w-full flex items-center justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
+          class="w-full flex items-center sm:justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
         >
         <div id="left-part" class="sm:w-1/3 flex justify-start">
           <div class="relative inline-block text-left">
@@ -53,6 +53,7 @@
             >
               <div class="py-1" role="none">
                 <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
+                <button class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/membership'">Jadi Member</button>
                 <form method="POST" action="#" role="none">
                   <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1">Logout</button>
                 </form>
@@ -63,7 +64,7 @@
           <a
             href="/"
             id="navbar-logo"
-            class="w-auto sm:w-1/3 flex items-center justify-center"
+            class="w-auto sm:w-1/3 flex items-center justify-center mx-auto"
           >
             <img
               id="logo"
@@ -118,21 +119,6 @@
               </form>
             </div>
           </div>
-          <div id="slider" class="flex sm:hidden justify-end items-center">
-            <a id="menu" href="#">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="24px"
-                viewBox="0 -960 960 960"
-                width="24px"
-                fill="#000000"
-              >
-                <path
-                  d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
-                ></path>
-              </svg>
-            </a>
-          </div>
         </div>
         <div
           id="bot-nav"
@@ -178,7 +164,7 @@
     >
 
     <!-- Header Section -->
-      <section class="profile-section w-full sm:w-1/2 max-w-5xl mx-auto p-8">
+      <section class="profile-section flex flex-col sm:flex-none w-full sm:w-1/2 max-w-5xl mx-auto p-8">
         <div class="flex items-end">
           <div class="flex-initial">
             <h1 class="text-3xl font-bold text-left mt-12 mb-4" style="width: 13.2rem;">Profil Pengguna</h1>
@@ -191,10 +177,10 @@
         <hr class="h-px bg-black border-0 dark:bg-gray-700">
 
         <!-- Profile Picture -->
-        <div class="profile-info flex flex-row mt-8">
-          <div class="profile-picture text-center mr-8">
+        <div class="profile-info flex flex-col sm:flex-row mb-4 sm:mb-0 mt-8">
+          <div class="profile-picture mb-4 text-center sm:mr-8 sm:ml-0">
             <img
-              class="rounded-full h-auto w-auto"
+              class="rounded-full h-64 sm:h-auto w-auto mx-auto sm:mx-0"
               src="images/pictures/default.png"
               alt="User Picture"
             />
@@ -347,7 +333,7 @@
       <section class="w-full sm:w-1/2 max-w-5xl mx-auto p-8">
         <h1 class="text-3xl font-bold text-left mt-12 mb-4"">Etalase Barang Anda</h2>
         <hr class="h-px bg-black border-0 dark:bg-gray-700">
-        <div class="grid grid-cols-2 gap-4 mt-4">
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-4">
           <!-- Example item, replace with actual data -->
           <div class="product-card p-4 border rounded-lg cursor-pointer hover:bg-gray-100 transition delay-100" onclick="location.href='/product'">
             <img
